[package]
name = "holani-tui"
version = "0.9.6"
edition = "2021"

[dependencies]
holani = { git = "https://github.com/LLeny/holani.git", tag = "0.9.6", features = [
  "comlynx_shared_memory",
] }
ratatui = "0.29"
env_logger = { version = "0.11.5", default-features = false, features = [
  "auto-color",
  "humantime",
] }
log = { version = "0.4", features = [
  "max_level_trace",
  "release_max_level_warn",
] }
kanal = { git = "https://github.com/fereidani/kanal.git", rev = "125fb7876797f20c632b25660c2f41c2908f9007" }
rodio = "0.20"
clap = { version = "4.5", features = ["derive"] }
thread-priority = "1.1.0"
